# toshl_e2e_tests

./: README.md  config.py  pyproject.toml
schemas/: get_entries.json
tests/: conftest.py
tests/api/: conftest.py  create_entry_test.py  delete_entry_test.py  get_entries_test.py  list_entries_test.py
tests/mobile/: config.py  conftest.py  expense_page_helper.py  expense_test.py  login_test.py
tests/mobile/utils/: expense_page_helper.py
tests/web/: conftest.py  expence_test.py  login_test.py
toshl_finance_demo/components/: confirmation_dialog.py  left_panel.py  transaction_details.py  transaction_dialog.py
toshl_finance_demo/data/: category.py  context.py  tag.py  transaction.py  user.py
toshl_finance_demo/pages/: login_page.py
toshl_finance_demo/utils/: file_path.py  load_schema.py
toshl_finance_demo_test/components/: confirmation_dialog.py  left_panel.py  right_panel.py  transaction_details.py  transaction_dialog.py
toshl_finance_demo_test/data/: category.py  tag.py  user.py
toshl_finance_demo_test/pages/: expences_page.py  login_page.py
toshl_finance_demo_test/pages/mobile/: expense_page.py  login_page.py  welcome_page.py
toshl_finance_demo_test/pages/web/: expenses_page.py  login_page.py
toshl_finance_demo_test/utils/: api.py  attach.py  file_path.py  load_schema.py
utils/: api.py  attach.py  file_path.py  load_schema.py
